Version 4.0.x:

* Fix device helper for xinput devices with recent SDL2 versions.
* Support for looking for ARM64 plugins.
* Prefer $HOME/FS-UAE over Documents/FS-UAE.
* Temporarily disable manymouse in device helper (fixes misleading security
  warning in macOS about listening to keyboard).
* Fixed screenshot function (Mod+S).
* Disabled some non-working shortcuts.

Version 4.0.0dev:
* New fsemu backend (work in progress).
* Use RTLD_DEEPBIND with dlopen on Linux when loading plugins.
* SCP floppy image doesn't wrap to revolution #0 cleanly [keirf].
* Fixed crash in nname_to_aname [PowderedToastMan].
* New option video_driver (can be sdl or null).
* Configure flags --disable-jit and --disable-x86 must no longer be specified
  for ARM builds, they will be automatically disabled.
* macOS: Only use -pagezero_size for x86_64 (Fixes builds for M1 hardware).
* Several features from FS-UAE 3.x are still missing (TODO: List them).
* FIXME: The changelog for this version is incomplete.
* New built-in slirp implementation from QEMU 5.2.0 and reworked the slirp
  support in FS-UAE. Fixes random crashes and corrupt network data.
* fs-uae-device-helper now goes into libexec, not bin.
* Add Midi Support to FS-UAE using the PortMidi library [cnvogelg].
* Support for F13-F19 keys on Apple Extended keyboard [immutable].
* Better clipboard sharing integration.
* Experimental floppy file picker dialogs (--enable-libnfd).
* New shortcut Mod+F9 to toggle between chipset and RTG display.
* Bridgeboard & VGA available and works with custom uae_* options.
* Fixed mouse integration.
* Only do LF <-> CRLF clipboard conversion on Windows [BastyCDGS].
* Console debugger can be used also in Windows.
* Lots of fixes to restore functionality after the merge.
* Updated emulation core from WinUAE 4210 (big merge).

Version 3.0.0dev:

* Show error during configure if OpenAL is not found.
* More controller configs.
* Imported updated translations from crowdin.com.

Version 2.9.12dev:
